# final-college-project

./: Cargo.toml  README.md  diesel.toml
migrations/2025-05-08-115932_create_patients_table/: up.sql
migrations/2025-05-12-114307_create_appointments_table/: down.sql  up.sql
migrations/2025-05-12-114449_create_admins_table/: up.sql
migrations/2025-05-14-102631_create_dumb_admin/: down.sql  up.sql
src/: main.rs  schema.rs
src/application/: mod.rs
src/application/errors/: admin_application_error.rs  appointment_application_error.rs  mod.rs  patient_application_error.rs
src/application/use_cases/: book_appointment.rs  cancel_appointment.rs  delete_patient_by_cpf.rs  find_patient_by_cpf.rs  list_appointments_by_patient_cpf.rs  login.rs  mod.rs  register_appointment.rs  register_patient.rs  update_patient_by_cpf.rs
src/domain/entities/: admin.rs  appointment.rs  mod.rs  patient.rs
src/domain/errors/: appointment_entity_error.rs  mod.rs  patient_entity_error.rs  repository_error.rs
src/domain/repositories/: admin_repository.rs  appointment_repository.rs  mod.rs  patient_repository.rs
src/domain/value_objects/: id.rs
src/infrastructure/: web.rs
src/infrastructure/repositories/: error.rs  mod.rs  postgres_admin_repository.rs  postgres_appointment_repository.rs  postgres_patient_repository.rs
src/presentation/: mod.rs
src/presentation/dtos/: appointment_dto.rs  mod.rs  patient_dto.rs
src/presentation/errors/: appointment_http_error.rs  mod.rs  patient_http_error.rs
src/presentation/extractors/: jwt_extractor.rs
src/presentation/handlers/: mod.rs  (+3 more)
(+5 files in other folders)
