[package]
name = "college-final-project-sghss"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
serde = { version = "1.0.204", features = ["derive"] }
actix-web = "4.8.0"
log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.3"
mockall = "0.13.1"
tokio = { version = "1.45.0", features = ["macros"] }
