[package]
name = "college-final-project-sghss"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
serde = { version = "1.0.204", features = ["derive"] }
actix-web = "4.8.0"
log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.3"
mockall = "0.13.1"
tokio = { version = "1.45.0", features = ["macros"] }
regex = "1.11.1"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
